<resources>
    <string name="app_name">LugaLuga</string>
    <string name="esqueci"><u>Esqueci minha senha</u></string>
    <string name="novo"><u>Criar novo usuário</u></string>
    <string name="home">Home</string>
    <string name="produto">Produtos</string>
    <string name="solici">Solicitações</string>
    <string name="acompanhamento">Acompanhamento</string>
    <string name="atend">Atendimento</string>
    <string name="sobre">Sobre nós</string>
    <string name="fale">Fale conosco</string>
    <string name="tv_produto"><b>Nome Produto</b></string>
    <string name="qtd">10pc</string>
    <string name="aluga">Alugar</string>
    <string name="tv_preco"><b>R$ 00,00</b></string>
    <string name="bemvindo"><b>Bem-vindo ao Luga-Luga</b></string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="ass">Assunto</string>
    <string name="titul"><b>Fale conosco</b></string>
    <string name="mens">Mensagem</string>
    <string name="enviar">Enviar</string>
    <string name="titul2">Sobre nós</string>
    <string name="subtitul"><b>Conheça o Luga-Luga</b></string>
    <string name="tel">Telefone: (99) 99999-9999</string>
    <string name="textao">Ao contrário da crença popular, Lorem Ipsum não é simplesmente um texto aleatório. Tem raízes em uma peça da literatura latina clássica de 45 aC, com mais de 2.000 anos. Richard McClintock, professor de latim no Hampden-Sydney College, na Virgínia, procurou uma das palavras latinas mais obscuras, consectetur, em uma passagem de Lorem Ipsum, e examinando as citações da palavra na literatura clássica, descobriu a fonte indubitável. Lorem Ipsum vem das seções 1.10.32 e 1.10.33 de "de Finibus Bonorum et Malorum" (Os Extremos do Bem e do Mal) de Cícero, escrito em 45 AC. Este livro é um tratado sobre a teoria da ética, muito popular durante o Renascimento. A primeira linha de Lorem Ipsum, "Lorem ipsum dolor sit amet..", vem de uma linha na seção 1.10.32.</string>
    <string name="tv_descricao">Ao contrário da crença popular, Lorem Ipsum não é simplesmente um texto aleatório. Tem raízes em uma peça da literatura latina clássica de 45 aC, com mais de 2.000 anos.</string>
    <string-array name="uf_cadastro">

        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>